--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "dev": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "ts": "ts-node try.ts"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.7.2",
