--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "grammy": "^1.27.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
